--- a/_posts/2024-01-02-更下一层楼-开启硬件探索之路.md
+++ b/_posts/2024-01-02-更下一层楼-开启硬件探索之路.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "更上一层楼"
+title:  "更下一层楼-开启硬件探索之路"
 date:   2024-01-02 13:00:00 +0000
-categories: jekyll
+categories: jekyll hardware
 tags: riscv
 ---
 
