--- a/_posts/2024-01-06-计划写一本书-晶体管的春天.md
+++ b/_posts/2024-01-06-计划写一本书-晶体管的春天.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "写一本书"
+title:  "计划写一本书-晶体管的春天"
 date:   2024-01-06 16:00:00 +0000
-categories: jekyll
+categories: jekyll book
 tags: index
 ---
 
