--- a/_posts/2024-01-02-更下一层楼-开启硬件探索之路.md
+++ b/_posts/2024-01-02-更下一层楼-开启硬件探索之路.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "更下一层楼-开启硬件探索之路"
 date:   2024-01-02 13:00:00 +0000
-categories: jekyll hardware
+categories: jekyll
 tags: riscv
 ---
 
