--- a/_posts/2024-01-06-计划写一本书-晶体管的spring.md
+++ b/_posts/2024-01-06-计划写一本书-晶体管的spring.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "计划写一本书-晶体管的春天"
 date:   2024-01-06 16:00:00 +0000
-categories: jekyll book
+categories: jekyll
 tags: index
 ---
 
@@ -40,36 +40,49 @@ tags: index
 
 > 上图描述了从晶体管到逻辑门，再到cpu，然后到操作系统、编译器、虚拟机、高级语言的过程
 
+> You may wonder how it is humanly possible to construct a complete computer system from the ground up, starting with nothing more than elementary logic gates. This must be a humongous enterprise! We deal with this complexity by breaking the system into modules. Each module is described separately, in a dedicated chapter, and built separately, in a standalone project. You might then wonder, how is it possible to describe and construct these modules in isolation? Surely they are interrelated! As we will demonstrate throughout the book, a good modular design implies just that: you can work on the individual modules independently, while completely ignoring the rest of the system. In fact, if the system is well designed, you can build these modules in any desired order, and even in parallel, if you work in a team. (page-31)
 
+> 一个人如何开发一个完整的计算机系统，答案是模块化
 
+> The cognitive ability to “divide and conquer” a complex system into manageable modules is empowered by yet another cognitive gift: our ability to discern between the abstraction and the implementation of each module. In computer science, we take these words concretely: abstraction describes what the module does, and implementation describes how it does it. With this distinction in mind, here is the most important rule in system engineering: when using a module as a building block—any module—you are to focus exclusively on the module’s abstraction, ignoring completely its implementation details. (page-32)
 
+> 模块分为抽象和实现两部分，抽象描述`what`，实现描述`how`
 
-# 目录
+> In chapter 1 we start with a single logic gate `Nand` and build from it a set of elementary and commonly used logic gates like And, Or, Xor, and so on.  
+> In chapters 2 and 3 we use these building blocks for constructing an Arithmetic Logic Unit and memory devices, respectively.   
+> In chapter 4 we pause our hardware construction journey and introduce a lowlevel machine language in both its symbolic and binary forms.   
+> In chapter 5 we use the previously built ALU and memory units for building a Central Processing Unit (CPU) and a Random Access Memory (RAM). These devices will then be integrated into a hardware platform capable of running programs written in the machine language presented in chapter 4.   
+> In chapter 6 we describe and build an assembler, which is a program that translates low-level programs written in symbolic machine language into executable binary code.  
+> This will complete the construction of the hardware platform. This platform will then become the point of departure for part II of the book, in which we’ll extend the barebone hardware with a modern software hierarchy consisting of a virtual machine, a compiler, and an operating system. (page-36)
 
-## 逻辑电路基础
+# 规划
 
-* 基于cmos的逻辑门实现
-* 组合电路及alu实现
-* 时序电路及DFF等实现
+> 书中从最基础的逻辑门开始，开发了一款16bit的cpu，开发了一款全新的汇编语言，在此基础上开发了一个简易的操作系统，一个类似jvm的虚拟机以及一门类似java的编程语言。然后用类java语言开发了一个俄罗斯方块，所以整个项目旅程被命名为`Nand to Tetris`。
 
-## HDL
+> 我的规划是走一样的路，但是使用成熟的开源项目，裁剪之后得到一个独立的`可执行`程序。从晶体管和逻辑门开始，到一个包含cpu的soc，到kernel和jvm，最终到java web框架spring系列，突然灵光一闪，书名可以暂时叫`晶体管的spring`
+
+## 逻辑门
+
+* 从`cmos`构造`门电路`
+* 组合电路
+* 时序电路
+
+## 硬件描述语言
 
 * verilog
-* systemVerlog
-* vhdl
-* systemc
 * chisel
+* systemVerlog（*）
+* vhdl（*）
+* systemc（*）
 
-## 开源项目
+## 逻辑电路仿真和调试
 
-* chisel
-* openocd
-* opensbi
-* pk/bbl
 * verilator
 * spike
+* openocd
+* pk/bbl
 
-## rocket-chip实现
+## rocket-chip
 
 * alu
 * core
@@ -85,4 +98,18 @@ tags: index
 * 任务调度
 * 内存管理
 * 中断管理
+* tcp/ip
+* block
+
+## jvm
+
+* gc
+* classloader
+
+
+## spring
+
+* spring-mvc
+* spring-boot
+* spring-cloud
 
