--- a/_posts/2024-01-08-CMOS晶体管.md
+++ b/_posts/2024-01-08-CMOS晶体管.md
@@ -64,15 +64,15 @@ tags: hardware
 
 ![nMOS](/assets/images/2024-01-08/nMOS.png)
 
-> The substrate of an nMOS transistor is normally tied to GND, the lowest voltage in the system. First, consider the situation when the gate is also at 0V, as shown in Figure(a). The diodes between the source or drain and the substrate are reverse biased because the source or drain voltage is nonnegative. Hence, there is no path for current to flow between the source and drain, so the transistor is OFF. Now, consider when the gate is raised to VDD, as shown in Figure(b). When a positive voltage is applied to the top plate of a capacitor, it establishes an electric field that attracts positive charge on the top plate and negative charge to the bottom plate. If the voltage is sufficiently large, so much negative charge is attracted to the underside of the gate that the region inverts from p-type to effectively become n-type. This inverted region is called the channel. Now the transistor has a continuous path from the n-type source through the n-type channel to the n-type drain, so electrons can flow from source to drain. The transistor is ON. The gate voltage required to turn on a transistor is called the threshold voltage, Vt, and is typically 0.3 to 0.7V.
+> The substrate of an nMOS transistor is normally tied to GND, the lowest voltage in the system. First, consider the situation when the gate is also at 0V, as shown in Figure(a). The diodes between the source or drain and the substrate are reverse biased because the source or drain voltage is nonnegative. Hence, there is no path for current to flow between the source and drain, so the transistor is OFF. Now, consider when the gate is raised to V<sub>dd</sub>, as shown in Figure(b). When a positive voltage is applied to the top plate of a capacitor, it establishes an electric field that attracts positive charge on the top plate and negative charge to the bottom plate. If the voltage is sufficiently large, so much negative charge is attracted to the underside of the gate that the region inverts from p-type to effectively become n-type. This inverted region is called the channel. Now the transistor has a continuous path from the n-type source through the n-type channel to the n-type drain, so electrons can flow from source to drain. The transistor is ON. The gate voltage required to turn on a transistor is called the threshold voltage, V<sub>t</sub>, and is typically 0.3 to 0.7V.
 
 > nMOS晶体管的衬底是接地的，当gate的电压是0V时，p-type的衬底和n-type的source/drain构成二极管，所以source和drain是无法连通的。当gate的电压增加时，gate和衬底构成的电容开始充电，如果电压足够大，在电子场效应下，source和drain之间p-type类型的衬底转换为n-type，从而使source和drain连通。
 
-> pMOS与nMOS相反，n-type的衬底电压为VDD，当gate的电压也是VDD时，p-type的source/drain和n-type的衬底构成二极管，所以source和drain是无法连通的。当gate的电压变成0时，gate和衬底构成的电容开始反向充电，在电子场效应下，source和drain之间n-type类型的衬底转换为p-type，从而使source和drain连通。
+> pMOS与nMOS相反，n-type的衬底电压为V<sub>dd</sub>，当gate的电压也是V<sub>dd</sub>时，p-type的source/drain和n-type的衬底构成二极管，所以source和drain是无法连通的。当gate的电压变成0时，gate和衬底构成的电容开始反向充电，在电子场效应下，source和drain之间n-type类型的衬底转换为p-type，从而使source和drain连通。
 
-> Unfortunately, MOSFETs are not perfect switches. In particular, nMOS transistors pass 0’s well but pass 1’s poorly. Specifically, when the gate of an nMOS transistor is at VDD, the source will only swing between 0 and VDD − Vt when its drain ranges from 0 to VDD. Similarly, pMOS transistors pass 1’s well but 0’s poorly. However, we will see that it is possible to build logic gates that use transistors only in their good mode.
+> Unfortunately, MOSFETs are not perfect switches. In particular, nMOS transistors pass 0’s well but pass 1’s poorly. Specifically, when the gate of an nMOS transistor is at V<sub>dd</sub>, the source will only swing between 0 and V<sub>dd</sub> − V<sub>t</sub> when its drain ranges from 0 to V<sub>dd</sub>. Similarly, pMOS transistors pass 1’s well but 0’s poorly. However, we will see that it is possible to build logic gates that use transistors only in their good mode.
 
-> nMOS的source电压范围是[0, VDD − Vt]，如果太大会干扰电场，所以适合表示0；pMOS的source电压范围是[VDD - Vt, VDD]，如果太小会干扰电场，所以适合表示1。
+> nMOS的source电压范围是[0, V<sub>dd</sub> − V<sub>t</sub>]，如果太大会干扰电场，所以适合表示0；pMOS的source电压范围是[V<sub>dd</sub> - V<sub>t</sub>, V<sub>dd</sub>]，如果太小会干扰电场，所以适合表示1。
 
 > nMOS transistors need a p-type substrate, and pMOS transistors need an n-type substrate. To build both flavors of transistors on the same chip, manufacturing processes typically start with a p-type wafer, then implant n-type regions called wells where the pMOS transistors should go. These processes that provide both flavors of transistors are called Complementary MOS or CMOS. CMOS processes are used to build the vast majority of all transistors fabricated today.
 
@@ -93,37 +93,37 @@ tags: hardware
 
 ![CMOS-NOT](/assets/images/2024-01-08/CMOS-NOT.png)
 
-> The triangle indicates GND, and the flat bar indicates VDD. The nMOS transistor, N1, is connected between GND and the Y output. The pMOS transistor, P1, is connected between VDD and the Y output. Both transistor gates are controlled by the input, A. If A = 0, N1 is OFF and P1 is ON. Hence, Y is connected to VDD but not to GND, and is pulled up to a logic 1. P1 passes a good 1. If A = 1, N1 is ON and P1 is OFF, and Y is pulled down to a logic 0. N1 passes a good 0.
+> The triangle indicates GND, and the flat bar indicates V<sub>dd</sub>. The nMOS transistor, N1, is connected between GND and the Y output. The pMOS transistor, P1, is connected between V<sub>dd</sub> and the Y output. Both transistor gates are controlled by the input, A. If A = 0, N1 is OFF and P1 is ON. Hence, Y is connected to V<sub>dd</sub> but not to GND, and is pulled up to a logic 1. P1 passes a good 1. If A = 1, N1 is ON and P1 is OFF, and Y is pulled down to a logic 0. N1 passes a good 0.
 
-> 当A=0时，N1关闭P1打开，从而Y与VDD连接输出表示1的高电压；当A=1时，N1打开P1关闭，从而Y与GND连接输出表示0的低电压。根据真值表，这就是not门。
+> 当A=0时，N1关闭P1打开，从而Y与V<sub>dd</sub>连接输出表示1的高电压；当A=1时，N1打开P1关闭，从而Y与GND连接输出表示0的低电压。根据真值表，这就是not门。
 
 
 ### NAND
 
 ![CMOS-NAND](/assets/images/2024-01-08/CMOS-NAND.png)
 
-> The nMOS transistors N1 and N2 are connected in series; both nMOS transistors must be ON to pull the output down to GND. The pMOS transistors P1 and P2 are in parallel; only one pMOS transistor need be ON to pull the output up to VDD.
+> The nMOS transistors N1 and N2 are connected in series; both nMOS transistors must be ON to pull the output down to GND. The pMOS transistors P1 and P2 are in parallel; only one pMOS transistor need be ON to pull the output up to V<sub>dd</sub>.
 
-> 只有当A和B都是1时，P1和P2都关闭，N1和N2都打开，此时Y与GND连接输出表示0的低电压；其他3种情况下N1和N2不会同时打开，P1和P2至少打开一个，从而Y与VDD连接输出表示1的高电压。
+> 只有当A和B都是1时，P1和P2都关闭，N1和N2都打开，此时Y与GND连接输出表示0的低电压；其他3种情况下N1和N2不会同时打开，P1和P2至少打开一个，从而Y与V<sub>dd</sub>连接输出表示1的高电压。
 
 
 ### NOR
 
 ![CMOS-NOR](/assets/images/2024-01-08/CMOS-NOR.png)
 
-> The two pMOS transistors are connected in series; both pMOS transistors must be ON to pull the output uo to VDD. The two nMOS transistors are in parallel; only one nMOS transistor need be ON to pull the output down to GND.
+> The two pMOS transistors are connected in series; both pMOS transistors must be ON to pull the output uo to V<sub>dd</sub>. The two nMOS transistors are in parallel; only one nMOS transistor need be ON to pull the output down to GND.
 
-> 只有当A和B都是0时，pMOs都打开，nMos都关闭，此时Y与VDD连接输出表示1的高电压；其他3种情况下pMOS不会同时打开，nMOS至少打开一个，从而Y与GND连接输出表示0的低电压。
+> 只有当A和B都是0时，pMOs都打开，nMos都关闭，此时Y与V<sub>dd</sub>连接输出表示1的高电压；其他3种情况下pMOS不会同时打开，nMOS至少打开一个，从而Y与GND连接输出表示0的低电压。
 
 ### 通用反转电路
 
 ![CMOS-general](/assets/images/2024-01-08/CMOS-general.png)
 
-> nMOS transistors are good at passing 0’s, so a pull-down network of nMOS transistors is placed between the output and GND to pull the output down to 0. pMOS transistors are good at passing 1’s, so a pull-up network of pMOS transistors is placed between the output and VDD to pull the output up to 1. The networks may consist of transistors in series or in parallel. When transistors are in parallel, the network is ON if either transistor is ON. When transistors are in series, the network is ON only if both transistors are ON. 
+> nMOS transistors are good at passing 0’s, so a pull-down network of nMOS transistors is placed between the output and GND to pull the output down to 0. pMOS transistors are good at passing 1’s, so a pull-up network of pMOS transistors is placed between the output and V<sub>dd</sub> to pull the output up to 1. The networks may consist of transistors in series or in parallel. When transistors are in parallel, the network is ON if either transistor is ON. When transistors are in series, the network is ON only if both transistors are ON. 
 
-> p-type晶体管在打开时会产生高电压，所以放在VDD和output之间；n-type晶体管在打开时会产生低电压，所以放在GND和output之间。
+> p-type晶体管在打开时会产生高电压，所以放在V<sub>dd</sub>和output之间；n-type晶体管在打开时会产生低电压，所以放在GND和output之间。
 
-> If both the pull-up and pull-down networks were ON simultaneously, a short circuit would exist between VDD and GND. The output of the gate might be in the forbidden zone and the transistors would consume large amounts of power, possibly enough to burn out. On the other hand, if both the pull-up and pull-down networks were OFF simultaneously, the output would be connected to neither VDD nor GND. We say that the output floats. Its value is again undefined.
+> If both the pull-up and pull-down networks were ON simultaneously, a short circuit would exist between V<sub>dd</sub> and GND. The output of the gate might be in the forbidden zone and the transistors would consume large amounts of power, possibly enough to burn out. On the other hand, if both the pull-up and pull-down networks were OFF simultaneously, the output would be connected to neither V<sub>dd</sub> nor GND. We say that the output floats. Its value is again undefined.
 
 > 如果两个网络同时打开会造成短路，如果都关闭会导致output产生不确定的值。
 
