--- a/_posts/2024-01-14-门电路.md
+++ b/_posts/2024-01-14-门电路.md
@@ -66,22 +66,61 @@ tags: hardware
 
 ![gate-and](/assets/images/2024-01-14/gate-and.png)
 
-### NAND
-
-![gate-nand](/assets/images/2024-01-14/gate-nand.png)
-
 ### OR
 
 ![gate-or](/assets/images/2024-01-14/gate-or.png)
-
-### NOR
-
-![gate-nor](/assets/images/2024-01-14/gate-nor.png)
 
 ### XOR
 
 ![gate-xor](/assets/images/2024-01-14/gate-xor.png)
 
+### NAND
+
+![gate-nand](/assets/images/2024-01-14/gate-nand.png)
+
+> 基于nand可以实现not/and/or
+
+![nand-all](/assets/images/2024-01-14/nand-all.png)
+
+### NOR
+
+![gate-nor](/assets/images/2024-01-14/gate-nor.png)
+
+> 基于nor可以实现not/and/or
+
+![nor-all](/assets/images/2024-01-14/nor-all.png)
+
+
 ### XNOR
 
 ![gate-xnor](/assets/images/2024-01-14/gate-xnor.png)
+
+
+## 门电路的物理特性
+
+### Logic Levels
+
+![logic-level](/assets/images/2024-01-14/logic-level.png)
+
+> The mapping of a continuous variable onto a discrete binary variable is done by defining logic levels. The first gate is called the driver and the second gate is called the receiver. The output of the driver is connected to the input of the receiver. The driver produces a LOW(0) output in the range of 0 to V<sub>OL</sub> or a HIGH(1) output in the range of V<sub>OH</sub> to V<sub>DD</sub>. If the receiver gets an input in the range of 0 to V<sub>IL</sub>, it will consider the input to be LOW. If the receiver gets an input in the range of V<sub>IH</sub> to V<sub>DD</sub>., it will consider the input to be HIGH. If, for some reason such as noise or faulty components, the receiver’s input should fall in the forbidden zone between V<sub>IL</sub> and V<sub>IH</sub>, the behavior of the gate is unpredictable. V<sub>OH</sub>, V<sub>OL</sub>, V<sub>IH</sub>, and V<sub>IL</sub> are called the output and input high and low logic levels.
+
+> 低电压表示0，高电压表示1，为了避免误差，中间空出一段缓冲地带。
+
+
+### Noise Margins
+
+> If the output of the driver is to be correctly interpreted at the input of the receiver, we must choose V<sub>OL</sub> < V<sub>IH</sub> and V<sub>OH</sub> > V<sub>IH</sub>. Thus, even if the output of the driver is contaminated by some noise, the input of the receiver will still detect the correct logic level. The noise margin(NM) is the amount of noise that could be added to a worst-case output such that the signal can still be interpreted as a valid input. 
+
+> 输出域比输入域更窄以抵消轻微的波动。
+
+
+### Power Supplies
+
+> All digital circuits require a power supply voltage and a ground. For simplicity, we will focus on digital circuits that only require a single power supply voltage and ground. The power supply voltage is commonly given the abbreviations of either V<sub>CC</sub> or V<sub>DD</sub>. The “CC” or “DD” have to do with how the terminals of the transistors inside of the digital circuit are connected (i.e., “collector to collector” or “drain to drain”). Digital circuits will specify the required power supply voltage. Ground is considered an ideal 0 v. Digital circuits will also specify the maximum amount of DC current that can flow through the V<sub>CC</sub>(I<sub>CC</sub>) and GND(I<sub>GND</sub>) pins before damaging the part.
+
+> 所有的电子电路都需要电源电压和接地电压。
+
+> There are two components of a power supply current. The first is the current that is required for the functional operation of the device. This is called the quiescent current (I<sub>q</sub>). The second component of the power supply current is the output current (I<sub>O</sub>). Any current that flows out of a digital circuit must also flow into it. When a transmitting circuit sources current to a load on its output pin, it must bring in that same amount of current on another pin. This is accomplished using the power supply pin (V<sub>CC</sub>). Conversely, when a transmitting circuit sinks current from a load on its input pin, an equal amount of current must exit the circuit on a different pin. This is accomplished using the GND pin. This means that the amount of current flowing through the V<sub>CC</sub> and GND pins will vary depending on the logic states that are being driven on the outputs. Since a digital circuit may contain numerous output pins, the maximum amount of current flowing through the V<sub>CC</sub> and GND pins can scale quickly and care must be taken not to damage the device. 
+
+> 电子电路需要维持自身电流的平衡，失去的电流从电源引脚补充，多出的电流从接地引脚释放。
+
