--- a/_posts/2024-01-08-CMOS晶体管.md
+++ b/_posts/2024-01-08-CMOS晶体管.md
@@ -97,7 +97,6 @@ tags: hardware
 
 > 当A=0时，N1关闭P1打开，从而Y与V<sub>dd</sub>连接输出表示1的高电压；当A=1时，N1打开P1关闭，从而Y与GND连接输出表示0的低电压。根据真值表，这就是not门。
 
-
 ### NAND
 
 ![CMOS-NAND](/assets/images/2024-01-08/CMOS-NAND.png)
@@ -130,6 +129,12 @@ tags: hardware
 > In a properly functioning logic gate, one of the networks should be ON and the other OFF at any given time, so that the output is pulled HIGH or LOW but not shorted or floating. We can guarantee this by using the rule of conduction complements. When nMOS transistors are in series, the pMOS transistors must be in parallel. When nMOS transistors are in parallel, the pMOS transistors must be in series.
 
 > 为了避免短路和不确定性，两个网络必须是一个串联和一个并联。
+
+
+### 三态buffer
+
+> 三态buffer是`D-flip-flop`的关键组件之一，基于`NOT`电路，在`pMOS`拉高网络的下方串联一个`pMOS`，在`nMOS`拉低网络的上方串联一个`nMOS`，新增的两个晶体管分别被正反的`CLK/EN`控制，当`CLK/EN`控制关闭时，output处于浮动模式。
+
 
 ## 传输门
 
