--- a/_posts/2024-01-20-时序电路.md
+++ b/_posts/2024-01-20-时序电路.md
@@ -8,3 +8,156 @@ tags: hardware
 
 # 时序电路
 
+> The outputs of sequential logic depend on both current and prior input values. Hence, sequential logic has memory. Sequential logic might explicitly remember certain previous inputs or it might distill the prior inputs into a smaller amount of information called the state of the system. The state of a digital sequential circuit is a set of bits called state variables that contain all the information about the past necessary to explain the future behavior of the circuit
+
+> 时序电路的输出依赖当前的输入和之前的输入，一个最简单的例子：一个存钱并输出为余额的电路，初始余额为0，存100元输出余额100元，再存100元输出余额200元。余额是之前历次存钱金额的累加，也即是状态。
+
+## D-Flip-Flop
+
+> 电路的记忆能力不是魔法，它也是从最基础的门电路构造的，下面的内容会详细的描述记忆能力的构造过程。
+
+### 双稳态电路
+
+![bistable](/assets/images/2024-01-20/bistable.png)
+
+> The fundamental building block of memory is a bistable element, an element with two stable states. Figure(a) shows a simple bistable element consisting of a pair of inverters connected in a loop. Figure(b) shows the same circuit redrawn to emphasize the symmetry. The inverters are cross-coupled, meaning that the input of I1 is the output of I2 and vice versa. The circuit has no inputs, but it does have two outputs, Q and $\overline{\text{Q}}$. Analyzing this circuit is different from analyzing a combinational circuit because it is cyclic: Q depends on $\overline{\text{Q}}$, and $\overline{\text{Q}}$ depends on Q. 
+
+> 记忆能力的基础是一个有两个稳定状态的电路，即双稳态电路。双稳态电路的构造是两个`NOT`门电路输入输出交叉相连。
+
+![bistable2](/assets/images/2024-01-20/bistable2.png)
+
+>分别考虑`Q = 0`和`Q = 1`两种情况：
+
+* 见上图(a)，假设`Q = 0`可以推导出`I2 = 0`，进而$\overline{\text{Q}}$ = 1，从而`I1 = 1`，继而`Q = 0`，所以这是一个稳定状态。
+
+* 见上图(b)，假设`Q = 1`可以推导出`I2 = 1`，进而$\overline{\text{Q}}$ = 0，从而`I1 = 0`，继而`Q = 1`，所以这也是一个稳定状态。
+
+> 初次看这个图一直不理解，看起来像是违反了能量守恒，电流在传输过程中是会发生损耗继而导致衰减的，那还怎么能保持记忆能力。毫不夸张的说，关于时序电路的构造反反复复看了不下10遍才理解。参考[门电路](/jekyll/2024/01/14/门电路.html)一文中的描述，每个门电路都会连接Vcc和GND，而且每个门电路都有信号放大器的作用，会持续的从Vcc获取能量以抵消损耗。
+
+> An element with N stable states conveys log<sub>2</sub>N bits of information, so a bistable element stores one bit. The state of the cross-coupled inverters is contained in one binary state variable, Q. The value of Q tells us everything about the past that is necessary to explain the future behavior of the circuit. Specifically, if Q = 0, it will remain 0 forever, and if Q = 1, it will remain 1 forever. The circuit does have another node, $\overline{\text{Q}}$, but $\overline{\text{Q}}$ does not contain any additional information because if Q is known, $\overline{\text{Q}}$ is also known. On the other hand, $\overline{\text{Q}}$ is also an acceptable choice for the state variable.
+
+> N个稳定状态可以存储 log<sub>2</sub>N 个bit的信息，上述双稳态电路可以存储1-bit的信息。
+
+> 双稳态电路存在一个问题，首次上电的状态是未知的，而且没有提供输入端口来控制状态。
+
+### SR-Latch
+
+![sr-latch](/assets/images/2024-01-20/sr-latch.png)
+
+> 把上一节的电路的`NOT`替换为`NOR`就构成了一个`SR-Latch`，区别是多出了两个控制端口`S`和`R`，`S`的作用是`SET` `Q=1`，`R`的作用是`RESET` `Q=0`。  
+
+> 下面根据真值表分析此电路：`NOR`电路的真值表是至少一个输入为1时输出为0
+
+1. 假设`R = 1，S = 0`：`R = 1`进而推导出`Q = 0`，从而推导出 $\overline{\text{Q}}$ = 1，继而推导出`Q = 0`，所以这是一个稳定状态
+
+2. 假设`R = 0，S = 1`：此时无法确定Q的值，但是`S = 1`可以推导出 $\overline{\text{Q}}$ = 0，从而推导出`Q = 1`，继而推导出 $\overline{\text{Q}}$ = 0，所以这是一个稳定状态
+
+3. 假设`R = 1，S = 1`：此时推导出的结果 `Q = 0` 和 $\overline{\text{Q}}$ = 0，虽然也是稳定状态，但是 Q = $\overline{\text{Q}}$ = 0 是不正确的
+
+4. 假设`R = 0，S = 0`：此时Q和$\overline{\text{Q}}$的值都是无法确定的，进一步细分为2种情况
+
+![sr-latch-2](/assets/images/2024-01-20/sr-latch-2.png)
+
+5. 见上图(a)，假设`Q = 0`：可以推导出 $\overline{\text{Q}}$ = 1，进而推导出`Q = 0`，与假设一致
+
+6. 见上图(b)，假设`Q = 1`：可以推导出 $\overline{\text{Q}}$ = 0，进而推导出`Q = 1`，与假设一致
+
+> 总结一下：前3种情况下`Q`都可以保持一个稳定的可预测的值 Q<sub>prev</sub> 用于表示状态，当进入第4种情况时，Q会持续保持之前的值 Q<sub>prev</sub>，也就是说电路有了记忆能力。
+
+> 这是整个时序电路的基础，首次接触的人可能要看上十遍八遍才能完全理解。
+
+![sr-latch-table](/assets/images/2024-01-20/sr-latch-table.png)
+
+> 从上图的真值表可以发现有一种异常情况，即`R = 1，S = 1`时表示同时进行`SET`和`RESET`，这是一种不可能发生的情况，所以产生了矛盾的结果。
+
+![sr-latch-symbol](/assets/images/2024-01-20/sr-latch-symbol.png)
+
+> 上图表示`SR-Latch`的符号，后续很多时序电路都是基于`SR-Latch`构造的。`SR-Latch`自身有很多种实现方式，只要真值表一致就可以叫做`SR-Latch`。
+
+> Like the cross-coupled inverters, the SR latch is a bistable element with one bit of state stored in Q. However, the state can be controlled through the S and R inputs. When R is asserted, the state is reset to 0. When S is asserted, the state is set to 1. When neither is asserted, the state retains its old value. Notice that the entire history of inputs can be accounted for by the single state variable Q. No matter what pattern of setting and resetting occurred in the past, all that is needed to predict the future behavior of the SR latch is whether it was most recently set or reset.
+
+> `SR-Latch`也是一种双稳态电路，只是增加了两个控制端口。
+
+### D-Latch
+
+![d-latch](/assets/images/2024-01-20/d-latch.png)
+
+> The SR latch is awkward because it behaves strangely when both S and R are simultaneously asserted. Moreover, the S and R inputs conflate the issues of what and when. Asserting one of the inputs determines not only what the state should be but also when it should change. Designing circuits becomes easier when these questions of what and when are separated. The D latch in Figure(a) solves these problems. It has two inputs. The data input, D, controls what the next state should be. The clock input, CLK, controls when the state should change.
+
+> `SR-latch`的真值表有一种异常情况，另外`S`和`R`只能控制输出的内容无法控制输出变更的时机，上图(a)做了一个改进，把两个输入端口改为控制输出的`D`和控制变更时机的`CLK`
+
+> Again, we analyze the latch by writing the truth table, given in Figure(b). For convenience, we first consider the internal nodes D, S, and R. If CLK = 0, both S and R are FALSE, regardless of the value of D. If CLK = 1, one AND gate will produce TRUE and the other FALSE depending on the value of D. Given S and R, Q and $\overline{\text{Q}}$ are determined. Observe that when CLK = 0, Q remembers its old value, Q<sub>prev</sub>. When CLK = 1, Q = D. In all cases, $\overline{\text{Q}}$ is the complement of Q, as would seem logical. The D latch avoids the strange case of simultaneously asserted R and S inputs.
+
+> 根据上图(b)的真值表分析，巧妙的避开了`R = 1，S = 1`的异常情况。
+
+> Putting it all together, we see that the clock controls when data flows through the latch. When CLK = 1, the latch is transparent. The data at D flows through to Q as if the latch were just a buffer. When CLK = 0, the latch is opaque. It blocks the new data from flowing through to Q, and Q retains the old value. Hence, the D latch is sometimes called a transparent latch or a level-sensitive latch. 
+
+> 总结一下：当`CLK = 1`时`Q = D`，当`CLK = 0`时`Q`保持不变，所以CLK看起来像个latch（门闩）。而且当`CLK = 1`，`Q`会持续根据`D`变化，又称水平触发（level-sensitive）
+
+### D-Flip-Flop
+
+![d-flip-flop](/assets/images/2024-01-20/d-flip-flop.png)
+
+> A D flip-flop can be built from two back-to-back D latches controlled by complementary clocks, as shown in Figure(a). The first latch, L1, is called the leader. The second latch, L2, is called the follower, because it follows whatever L1 does.
+
+> `D flip-flop`由两个`D latche`构成，分别使用相反的`CLK`
+
+> When CLK = 0, the leader (latch L1) is transparent and the follower (L2) is opaque. Therefore, whatever value was at D propagates through to N1. When CLK = 1, the leader (L1) goes opaque and the follower (L2) becomes transparent. The value at N1 propagates through to Q, but N1 is cut off from D. Hence, whatever value was at D immediately before the clock rises from 0 to 1 gets copied to Q immediately after the clock rises. At all other times, Q retains its old value, because there is always an opaque latch blocking the path between D and Q.
+
+> 当`CLK = 0`时`D`传播到`N1`，此时`L2`是关闭的，`Q不会受影响`；当`CLK = 1`时`L1`关闭`L2`打开，`N1`传播到`Q`，同时不受`D`的影响。
+
+> In other words, a D flip-flop copies D to Q on the rising edge of the clock and remembers its state at all other times. The rising edge of the clock is often just called the clock edge for brevity. The D input specifies what the new state will be. The clock edge indicates when the state should be updated.
+
+> `D flip-flop`只在上升沿时传播`D`的值到`Q`，其他时间都保持状态不变。`D`输入端口指定了新的状态，`CLK`输入端口指定了状态更新的时机，`D flip-flop`又称边缘触发（edge-triggered）。
+
+
+![d-flip-flop-2](/assets/images/2024-01-20/d-flip-flop-2.png)
+
+> 上图更加清楚的描绘了`D flip-flop`的结构
+
+![d-flip-flop-3](/assets/images/2024-01-20/d-flip-flop-3.png)
+
+> When CLK = 0 (master operating), the D input is stored into the front-end latch, and the back-end latch holds the data of the previous cycle. Since the transfer gate connecting the front-end and back-end is cut off, the signal is not propagated. When CLK= 1 (slave operating), the data stored in the front-end is transferred to the backend. At that time, the signal from D input is isolated. 
+
+> 当`CLK = 0`时，两个latch连接断开使`D`无法转播到`Q`，此时`Q`保持旧值不变；当`CLK = 1`时之前保存的`D`值开始传播到`Q`，同时更新`Slave`的状态。
+
+> How many transistors are needed to build the D flip-flop described in this section?
+
+> A NAND or NOR gate uses four transistors. A NOT gate uses two transistors. An AND gate is built from a NAND and a NOT, so it uses six transistors. The SR latch uses two NOR gates, or eight transistors. The D latch uses an SR latch, two AND gates, and a NOT gate, or 22 transistors. The D flip-flop uses two D latches and a NOT gate, or 46 transistors. 
+
+> 一个`NAND`或`NOR`需要4个晶体管，一个`NOT`使用2个晶体管，一个`AND`使用一个`NAND`和一个`NOT`，也即是6个晶体管，一个`SR-latch`使用2个`NOR`，也即是8个晶体管，`D-latch`使用一个`SR-latch`、2个`AND`和1个`NOT`，也即是22个晶体管，一个`D flip-flop`使用2个`D-latch`和1个`NOT`，也即是46个晶体管！！！
+
+
+### Register
+
+![register](/assets/images/2024-01-20/register.png)
+
+> N个`D-flip-flop`共享`CLK`即构成一个N-bit的寄存器
+
+## Latch的晶体管构造
+
+> 上一节描述了一个标准的`D flip-flop`需要46个晶体管，一个`latch`就像一个开关，可以替换为一个更高效的[`transmission gate`](/jekyll/2024/01/08/CMOS晶体管.html)
+
+![cmos-d-latch](/assets/images/2024-01-20/cmos-d-latch.png)
+
+> A compact D latch can be constructed from a single transmission gate, as shown in Figure(a). When CLK = 1 and CLK = 0, the transmission gate is ON, so D flows to Q and the latch is transparent. When CLK = 0 and CLK = 1, the transmission gate is OFF, so Q is isolated from D and the latch is opaque. This latch suffers from two major limitations:
+
+* Floating output node: When the latch is opaque, Q is not held at its value by any gates. Thus, Q is called a floating or dynamic node. After some time, noise and charge leakage may disturb the value of Q.
+
+* No buffers: The lack of buffers has caused malfunctions on several commercial chips. A spike of noise that pulls D to a negative voltage can turn on the nMOS transistor, making the latch transparent, even when CLK = 0. Likewise, a spike on D above V<sub>DD</sub> can turn on the pMOS transistor even when CLK = 0. And the transmission gate is symmetric, so it could be driven backward with noise on Q, affecting the input D. The general rule is that neither the input of a transmission gate nor the state node of a sequential circuit should ever be exposed to the outside world, where noise is likely.
+
+> 如果直接用一个`transmission gate`来实现`D-latch`会存在两个问题：当开关闭合后，Q成为float节点；缺少buffer可能导致开关在收到干扰后异常打开。
+
+> Figure(b) shows a more robust 12-transistor D latch used on modern commercial chips. It is still built around a clocked transmission gate, but it adds inverters I1 and I2 to buffer the input and output. The state of the latch is held on node N1. Inverter I3 and the tristate buffer, T1, provide feedback to turn N1 into a static node. If a small amount of noise occurs on N1 while CLK = 0, T1 will drive N1 back to a valid logic value.
+
+> 在`transmission gate`两侧加上`inverters`以增强抗干扰能力。
+
+![cmos-d-flip-flop](/assets/images/2024-01-20/cmos-d-flip-flop.png)
+
+> 上图是基于`CMOS`实现的优化后的`D flip-flop`，一共使用20个晶体管：4个`NOT`共8个晶体管，2个`transmission gate`共4个晶体管，2个三态buffer共8个晶体管。
+
+## 时序电路的例子：Counter
+
+![counter](/assets/images/2024-01-20/counter.png)
+
+> 一个N-bit的counter由一个加法器和一个可重置的寄存器构成，每个周期给寄存器加1。
