--- a/_posts/2024-01-21-有穷状态机.md
+++ b/_posts/2024-01-21-有穷状态机.md
@@ -171,15 +171,94 @@ Y = S<sub>0</sub>A
 
 ## 模块化设计
 
+### 背景
+
+> 修改上文的红绿灯案例，增加交通管制模式，新增输入信号P和R，P=1时进入管制模式，进入管制模式后，红绿灯正常运转到L<sub>B</sub>为绿灯，之后一直保持绿灯，直到R=1离开管制模式。
+
+### 常规模式
+
+![fsm-big-1](/assets/images/2024-01-21/fsm/fsm-big-1.png)
+
+![fsm-big-2](/assets/images/2024-01-21/fsm/fsm-big-2.png)
+
+> 由于引入的交通管制模式导致状态膨胀，S0-S3处理普通模式下的红绿灯，新增S4-S7处理交通管制模式下的红绿灯。
+
+### 模块化模式
+
+![fsm-module-1](/assets/images/2024-01-21/fsm/fsm-module-1.png)
+
+![fsm-module-2](/assets/images/2024-01-21/fsm/fsm-module-2.png)
+
+> 把一个复杂的状态机拆分成多个简单的状态机，采用模块化的思维方式可以简化状态的管理。
 
 ## 反向推导
 
+> 从电路图反向推导出状态变化图和上文介绍的FSM设计过程正好相反，是一种逆向工程
+
+![reverse-gate](/assets/images/2024-01-21/fsm/reverse-gate.png)
+
+* Examine circuit, stating inputs, outputs, and state bits.
+
+> 分析上图的输入信号是A<sub>1:0</sub>，输出信号是unlock，而且输出信号只依赖状态，所以判定是Moore类型
+
+* Write next state and output equations.
+
+> 根据电路图写入布尔等式如下图：
+
+![reverse-bool-equation](/assets/images/2024-01-21/fsm/reverse-bool-equation.png)
+
+* Create next state and output tables.
+
+> 根据布尔等式推导出状态转换真值表和输出信号真值表如下：
+
+![reverse-state-table](/assets/images/2024-01-21/fsm/reverse-state-table.png)
+
+> 4个输入变量所以有16条记录
+
+![reverse-output-table](/assets/images/2024-01-21/fsm/reverse-output-table.png)
+
+* Reduce the next state table to eliminate unreachable states.
+
+> 根据kmap等方式简化真值表如下：
+
+![reverse-state-table-reduced](/assets/images/2024-01-21/fsm/reverse-state-table-reduced.png)
+
+![reverse-output-table-reduced](/assets/images/2024-01-21/fsm/reverse-output-table-reduced.png)
+
+* Assign each valid state bit combination a name.
+
+> 给每个状态起个名称：S0 = 00, S1 = 01, S2 = 10
+
+* Rewrite next state and output tables with state names.
+
+> 根据名称重写状态转换表和输出表如下：
+
+![reverse-state-decoding](/assets/images/2024-01-21/fsm/reverse-state-decoding.png)
+
+![reverse-output-decoding](/assets/images/2024-01-21/fsm/reverse-output-decoding.png)
+
+* Draw state transition diagram.
+
+> 根据状态转换表画出状态转换图如下：
+
+![reverse-state-transition-diagram](/assets/images/2024-01-21/fsm/reverse-state-transition-diagram.png)
+
+* State in words what the FSM does.
+
+> 根据状态转换图和输出表发现，只有先输入3然后输入1才能到达解锁状态S2
 
 ## 总结
 
+Finite state machines are a powerful way to systematically design sequential circuits from a written specification. Use the following procedure to design an FSM:
 
-
-
-
-
+1. Identify the inputs and outputs.
+2. Sketch a state transition diagram.
+3. For a Moore machine:
+    * Write a state transition table.
+    * Write an output table.
+4. For a Mealy machine:
+    * Write a combined state transition and output table.
+* Select state encodings -— your selection affects the hardware design.
+* Write Boolean equations for the next state and output logic.
+* Sketch the circuit schematic.
 
