--- a/_posts/2024-01-22-存储结构.md
+++ b/_posts/2024-01-22-存储结构.md
@@ -40,7 +40,7 @@ tags: hardware
 
 > To read a bit cell, the bitline is initially left floating (Z). Then, the wordline is turned ON, allowing the stored value to drive the bitline to 0 or 1. To write a bit cell, the bitline is strongly driven to the desired value. Then, the wordline is turned ON, connecting the bitline to the stored bit. The strongly driven bitline overpowers the contents of the bit cell, writing the desired value into the stored bit.
 
-> 读数据时bitline处于float模式，然后打开wordline，bitcell存储的值流入bitline；写数据时先设置bitline，然后打开wordline，bitline的值流入bitcell。
+> 读数据时bitline处于float模式（空置），然后打开wordline，bitcell存储的值（电流）流入bitline；写数据时先设置bitline，然后打开wordline，bitline的值（电流）流入bitcell。
 
 ![memory-symbol-bitcell-array](/assets/images/2024-01-22/memory-symbol-bitcell-array.png)
 
@@ -48,7 +48,7 @@ tags: hardware
 
 > During a memory read, a wordline is asserted, and the corresponding row of bit cells drives the bitlines HIGH or LOW. During a memory write, the bitlines are driven HIGH or LOW first and then a wordline is asserted, allowing the bitline values to be stored in that row of bit cells. For example, to read Address 10, the bitlines are left floating, the decoder asserts wordline<sub>2</sub>, and the data stored in that row of bit cells (100) reads out onto the Data bitlines. To write the value 001 to Address 11, the bitlines are driven to the value 001, then wordline<sub>3</sub> is asserted and the new value (001) is stored in the bit cells.
 
-> 读数据时bitline处于float模式，然后打开wordline，bitcell存储的值流入bitline；写数据时先设置bitline，然后打开wordline，bitline的值流入bitcell。
+> 读数据时bitline处于float模式（空置），然后打开wordline，bitcell存储的值（电流）流入bitline；写数据时先设置bitline，然后打开wordline，bitline的值（电流）流入bitcell。
 
 ### 内存端口
 
@@ -66,15 +66,86 @@ tags: hardware
 
 > RAM的两种主要类型是DRAM和SRAM，DRAM通过给电容充电来存储数据，SRAM通过类似于flip-flop的交叉耦合的inverter存储数据。ROM有很多类型，差异在于数据写入和擦除的方式。
 
+## 非持久化存储
 
-## DRAM
+### DRAM
+
+![dram-1](/assets/images/2024-01-22/dram-1.png)
+
+> DRAM, pronounced “dee-ram,” stores a bit as the presence or absence of charge on a capacitor. The bit value is stored on a capacitor. The nMOS transistor behaves as a switch that either connects or disconnects the capacitor from the bitline. When the wordline is asserted, the nMOS transistor turns ON, and the stored bit value transfers to or from the bitline.
+
+> DRAM的存储结构如上图，数据bit存储在电容中，wordline通过nMOS控制电容和bitline是否连通。
+
+![dram-2](/assets/images/2024-01-22/dram-2.png)
+
+> When the capacitor is charged to V<sub>DD</sub>, the stored bit is 1; when it is discharged to GND, the stored bit is 0. The capacitor node is dynamic because it is not actively driven HIGH or LOW by a transistor tied to V<sub>DD</sub> or GND.
+
+> 电容充电时表示1，电容放电时表示0；之所以说电容是动态的是因为它并不是直接连接V<sub>DD</sub>和GND。
+
+> Upon a read, data values are transferred from the capacitor to the bitline. Upon a write, data values are transferred from the bitline to the capacitor. Reading destroys the bit value stored on the capacitor, so the data word must be restored (rewritten) after each read. Even when DRAM is not read, the contents must be refreshed (read and rewritten) every few milliseconds, because the charge on the capacitor gradually leaks away.
+
+> 读写过程就是通过bitline实现电容的充放电，神奇之处在于读是破坏性的，读完之后需要重新写入，更有甚者，就算不读也要定期刷新，因为电容内的电子慢慢会泄露。
 
 
+### SRAM
 
-## SRAM
+![sram](/assets/images/2024-01-22/sram.png)
 
+> SRAM, pronounced “es-ram,” is static because stored bits do not need to be refreshed. The data bit is stored on cross-coupled inverters like those used in flip-flop. Each cell has two outputs, bitline and $\overline{\text{bitline}}$. When the wordline is asserted, both nMOS transistors turn on, and data values are transferred to or from the bitlines. Unlike DRAM, if noise degrades the value of the stored bit, the cross-coupled inverters restore the value.
+
+> SRAM的bit存储结构是一对交叉耦合的not门电路，也是由wordline通过控制nMOS实现数据的读写。和DRAM的区别在于not门电路是连接V<sub>DD</sub>和GND的，所以不用刷新，流失的电子可以从V<sub>DD</sub>补充。
+
+---
+
+> Digital systems often use a number of registers to store temporary variables. This group of registers, called a register file, is usually built as a small, multiported SRAM array because it is more compact than an array of flip-flops. In some register files, a particular entry, such as register 0, is hardwired to always read the value 0 because 0 is a commonly used constant.
+
+> 由于SRAM不需要刷新，所以性能比DRAM更好，数字电路包括cpu的寄存器通常是基于多端口的SRAM存储块。
+
+![register-file](/assets/images/2024-01-22/register-file.png)
+
+> 上图是一个典型的寄存器文件，包括32个32-bit的寄存器，它有2个读端口和一个写端口，在一个内存周期内就可以实现类似`add R3 R1 R2`的指令
+
+### 对比
+
+![ram-speed](/assets/images/2024-01-22/ram-speed.png)
+
+> Flip-flops, SRAMs, and DRAMs are all volatile memories, but each has different area and delay characteristics. The data bit stored in a flip-flop is available immediately at its output. But flip-flops take at least 20 transistors to build. Generally, the more transistors a device has, the more area, power, and cost it requires. DRAM latency is longer than that of SRAM because its bitline is not actively driven by a transistor. DRAM must wait for charge to move (relatively) slowly from the capacitor to the bitline. DRAM also fundamentally has lower throughput than SRAM, because it must refresh data periodically and after a read. DRAM technologies such as synchronous DRAM (SDRAM) and double data rate (DDR) SDRAM have been developed to overcome this problem. SDRAM uses a clock to pipeline memory accesses. DDR SDRAM, sometimes called simply DDR, uses both the rising and falling edges of the clock to access data, thus doubling the throughput for a given clock speed. 
+
+> flip-flop是最快的，但是使用的晶体管也最多，意味着面积和耗能都更高。DRAM相对来说比较慢，主要原因是需要刷新，后续升级的技术`DDR SDRAM`大幅提高了读写速度。
+
+> Memory latency and throughput also depend on memory size; larger memories tend to be slower than smaller ones if all else is the same. The best memory type for a particular design depends on the speed, cost, and power constraints.
+
+> 内存的延迟和吞吐和内存大小也有关系，所以无法造出`又大又快`的内存，关键在于合适就好，根据`速度/能耗/造价`综合考虑因地制宜，由此衍生除了经典的分层存储结构：`SRAM寄存器 -> 多级缓存 -> DRAM内存 -> SSD/HDD`。
+
+
+## 持久化存储
 
 ### ROM
 
-## SSD
+![rom-bitcell](/assets/images/2024-01-22/rom-bitcell.png)
+
+> ROM stores a bit as the presence or absence of a transistor. To read the cell, the bitline is weakly pulled HIGH. Then, the wordline is turned ON. If the transistor is present, it pulls the bitline LOW. If it is absent, the bitline remains HIGH. Note that the ROM bit cell is a combinational circuit and has no state to “forget” if power is turned off.
+
+> ROM通过晶体管是否存在来实现数据bit的存储，读取数据时，bitline略微拉高，然后打开wordline，如果晶体管存在，它会把bitline拉低，如果缺失bitline保持不变。
+
+![rom-demo](/assets/images/2024-01-22/rom-demo.png)
+
+> 上图展示了一个4x3的rom，点号表示表示1。
+
+> 以此原理制造的ROM的内容是在生产时指定的，无法更改。后来衍生出了可编程的PROM，在每个位置都放置晶体管，然后通过编程的方式决定晶体管是否可连通。
+
+![rom-fuse](/assets/images/2024-01-22/rom-fuse.png)
+
+> 上图是一个利用fuse技术实现的可编程ROM，可以通过高电压破坏晶体管的连通性来实现编程，这种破坏是不可逆的，所以也称为一次性可编程ROM。
+
+> Reprogrammable ROMs provide a reversible mechanism for connecting or disconnecting the transistor to GND. Erasable PROMs (EPROMs, pronounced “e-proms”) replace the nMOS transistor and fuse with a floating-gate transistor. The floating gate is not physically attached to any other wires. When suitable high voltages are applied, electrons tunnel through an insulator onto the floating gate, turning on the transistor and connecting the bitline to the wordline (decoder output). When the EPROM is exposed to intense ultraviolet (UV) light for about half an hour, the electrons are knocked off the floating gate, turning the transistor off. These actions are called programming and erasing, respectively. Electrically erasable PROMs (EEPROMs, pronounced “e-eproms” or “double-e proms”) and Flash memory use similar principles but include circuitry on the chip for erasing as well as programming, so no UV light is necessary. EEPROM bit cells are individually erasable; Flash memory erases larger blocks of bits and is cheaper because fewer erasing circuits are needed. 
+
+> 可重复编程的ROM需要一种可靠且可重复的机制来断开晶体管连接，比如EEPROM可通过暴露在紫外光下实现断开晶体管连接。
+
+
+### Flash
+
+
+
+
 
